--- a/src/app/public/login/login.css
+++ b/src/app/public/login/login.css
@@ -22,17 +22,11 @@
 .form-signin .form-control:focus {
     z-index: 2;
 }
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
 
 .form-signin .alert {
     margin-top: 10px;
+}
+
+.form-signin div.help-block.has-error p {
+    color: #a94442;
 }
