Refactored: controller and login form - show form status not only errors messages - alerts instead of help-notes

--- a/src/app/common/partials/messages.html
+++ b/src/app/common/partials/messages.html
@@ -1,6 +1,7 @@
-<p ng-message="required">This field is required</p>
-<p ng-message="minlength">This field is too short</p>
-<p ng-message="maxlength">This field is too long</p>
-<p ng-message="required">This field is required</p>
-<p ng-message="email">This needs to be a valid email</p>
-<p ng-message="credentials">Wrong credentials</p>
+<div class="alert alert-danger" role="alert" ng-message="required">This field is required</div>
+<div class="alert alert-danger" role="alert" ng-message="minlength">This field is too short</div>
+<div class="alert alert-danger" role="alert" ng-message="maxlength">This field is too long</div>
+<div class="alert alert-danger" role="alert" ng-message="required">This field is required</div>
+<div class="alert alert-danger" role="alert" ng-message="email">This needs to be a valid email</div>
+<div class="alert alert-danger" role="alert" ng-message="credentials">Wrong credentials</div>
+<div class="alert alert-success" role="alert" ng-message="loggedIn">You are successfully logged in</div>
