Changed button to link for edit column

--- a/src/app/common/grid/grid-column-edit.html
+++ b/src/app/common/grid/grid-column-edit.html
@@ -1,5 +1,5 @@
 <td class="col-button">
-	<button type="button" class="btn btn-info btn-sm" ng-click="vm.edit()">
+	<a class="btn btn-info btn-sm" ui-sref="realine.dashboard.superheroes.edit({email: vm.entity.email})">
 		<span class="glyphicon glyphicon-edit"></span>
-	</button>
+	</a>
 </td>
