--- a/src/app/public/login/login.html
+++ b/src/app/public/login/login.html
@@ -5,7 +5,7 @@
 		<div class="form-group" ng-class="{ 'has-error': login.hasError(login.form.email) }">
 			<label for="inputEmail" class="sr-only">Email address</label>
 			<input type="email" id="inputEmail" class="form-control" placeholder="Email address"
-			       required="" ng-model="login.data.email" ng-change="cleanFormError()" name="email">
+			       required="" ng-model="login.data.email" ng-change="login.cleanFormStatus()" name="email">
 
 			<div ng-show="login.hasError(login.form.email)" ng-messages="login.form.email.$error">
 				<div ng-messages-include="app/common/partials/messages.html"></div>
@@ -14,7 +14,7 @@
 		<div class="form-group" ng-class="{ 'has-error': login.hasError(login.form.password) }">
 			<label for="inputPassword" class="sr-only">Password</label>
 			<input type="password" id="inputPassword" class="form-control" placeholder="Password"
-			       required="" ng-model="login.data.password" ng-change="cleanFormError()" name="password">
+			       required="" ng-model="login.data.password" ng-change="login.cleanFormStatus()" name="password">
 
 			<div ng-show="login.hasError(login.form.password)" ng-messages="login.form.password.$error">
 				<div ng-messages-include="app/common/partials/messages.html"></div>
