Added message for errors about wrong decimal format

--- a/src/app/common/partials/messages.html
+++ b/src/app/common/partials/messages.html
@@ -3,5 +3,6 @@
 <div class="alert alert-danger" role="alert" ng-message="maxlength">This field is too long</div>
 <div class="alert alert-danger" role="alert" ng-message="required">This field is required</div>
 <div class="alert alert-danger" role="alert" ng-message="email">This needs to be a valid email</div>
+<div class="alert alert-danger" role="alert" ng-message="decimal">This needs to be a valid decimal</div>
 <div class="alert alert-danger" role="alert" ng-message="credentials">Wrong credentials</div>
 <div class="alert alert-success" role="alert" ng-message="loggedIn">You are successfully logged in</div>
